--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ debug-assertions = false
 incremental = true       # Compile your binary in smaller steps.
 codegen-units = 1        # Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
 lto = true               # Enables link-time-optimizations. Use false for faster compile time.
-opt-level = "s"          # "s" prioritizes small binary size. Use 3 for faster compile time.
+opt-level = 3            # "s" prioritizes small binary size. Use 3 for faster compile time.
 panic = "abort"          # Higher performance by disabling panic handlers.
 strip = true             # Ensures debug symbols are removed.
 debug = false
