--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,8 +155,9 @@ default-features = false
 features = []
 
 [dependencies.dendros]
-git = "https://github.com/karolisr/dendros.git"
-branch = "main"
+# git = "https://github.com/karolisr/dendros.git"
+# branch = "main"
+path = "../dendros"
 default-features = false
 features = []
 
