Use "dendros" GitHub URL instead of local path.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,9 +151,9 @@ default-features = false
 features = []
 
 [dependencies.dendros]
-# git = "https://github.com/karolisr/dendros.git"
-# branch = "main"
-path = "../dendros"
+git = "https://github.com/karolisr/dendros.git"
+branch = "main"
+# path = "../dendros"
 default-features = false
 features = []
 
