--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,88 +144,36 @@ features = [
 ]
 # ------------------------------------------------------------------------
 
-[target.aarch64-apple-darwin.dependencies.muda]
-git = "https://github.com/karolisr/muda.git"
-branch = "custom"
-default-features = false
-features = []
-
 [dependencies.dendros]
 git = "https://github.com/karolisr/dendros.git"
 branch = "main"
 default-features = false
 features = []
 
-# [dependencies.slotmap]
-# version = "1.0.7"
-# default-features = false
-# features = ["std"]
-
 [target.aarch64-apple-darwin.dependencies]
 objc2 = "0.6.0"
 objc2-app-kit = "0.3.0"
 objc2-foundation = "0.3.0"
+
+[target.aarch64-apple-darwin.dependencies.muda]
+git = "https://github.com/karolisr/muda.git"
+branch = "custom"
+default-features = false
+features = []
 
 [target.aarch64-apple-darwin.dependencies.rfd]
 version = "0.15.3"
 default-features = false
 features = []
 
-# [dependencies.tokio]
-# version = "1.44.1"
-# default-features = false
-# features = [
-#     "fs",
-#     "rt",
-# ]
-
-# [dependencies.cosmic-text]
-# version = "0.14.0"
-# default-features = false
-# features = [
-#     "std",
-#     "swash",
-#     "fontconfig",
-#     "cosmic_undo_2",
-#     "hashbrown",
-#     "modit",
-#     "monospace_fallback",
-#     "no_std",
-#     "shape-run-cache",
-#     "syntect",
-#     "sys-locale",
-#     "vi",
-#     "warn_on_missing_glyphs",
-#     "wasm-web",
-# ]
-
-# [dependencies.iced_anim]
-# version = "0.2.1"
-# default-features = false
-# features = [
-#     "derive",
-#     "widgets",
-# ]
-
-# [target.x86_64-unknown-linux-gnu.dependencies.rfd]
-# version = "0.15.3"
-# default-features = false
-# features = [
-#     ### Uses GTK for dialogs on Linux & BSDs; has no effect on Windows and macOS
-#     "gtk3",
-#     ### Uses XDG Desktop Portal instead of GTK on Linux & BSDs
-#     # "xdg-portal",
-#     ### Use TaskDialogIndirect API from ComCtl32.dll v6 for showing message dialog. This is necessary if you need to customize dialog button texts
-#     # "common-controls-v6",
-# ]
-
-# [target.x86_64-unknown-linux-gnu.dependencies.muda]
-# git = "https://github.com/karolisr/muda.git"
-# branch = "custom"
-# default-features = false
-# features = [
-#     # "common-controls-v6",
-#     "gtk",
-#     # "libxdo",
-#     # "serde",
-# ]
+[target.x86_64-unknown-linux-gnu.dependencies.rfd]
+version = "0.15.3"
+default-features = false
+features = [
+    ### Uses GTK for dialogs on Linux & BSDs; has no effect on Windows and macOS
+    "gtk3",
+    ### Uses XDG Desktop Portal instead of GTK on Linux & BSDs
+    # "xdg-portal",
+    # "async-std",
+    # "tokio",
+]
