--- a/Cargo.toml
+++ b/Cargo.toml
@@ -154,12 +154,13 @@ branch = "main"
 default-features = false
 features = []
 
-[target.macos]
-
 [target.'cfg(target_os = "macos")'.dependencies]
-objc2 = "0.6.0"
-objc2-app-kit = "0.3.0"
-objc2-foundation = "0.3.0"
+objc2 = "0.6"
+objc2-app-kit = "0.3"
+objc2-foundation = "0.3"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows-sys = "0.59"
 
 [target.'cfg(target_os = "macos")'.dependencies.muda]
 git = "https://github.com/karolisr/muda.git"
