--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,8 +159,8 @@ objc2 = "0.6"
 objc2-app-kit = "0.3"
 objc2-foundation = "0.3"
 
-[target.'cfg(target_os = "windows")'.dependencies]
-windows-sys = "0.59"
+# [target.'cfg(target_os = "windows")'.dependencies]
+# windows-sys = "0.59"
 
 [target.'cfg(target_os = "macos")'.dependencies.muda]
 git = "https://github.com/karolisr/muda.git"
@@ -172,7 +172,9 @@ features = []
 git = "https://github.com/karolisr/muda.git"
 branch = "custom"
 default-features = false
-features = []
+features = [
+    # "common-controls-v6"
+]
 
 [target.'cfg(target_os = "macos")'.dependencies.rfd]
 version = "0.15"
