--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,16 +1,20 @@
 edition = "2024"
 
+reorder_imports = true
+reorder_modules = true
+
 max_width = 100
 
-struct_lit_width = 60
-array_width = 60
+array_width = 100
+attr_fn_like_width = 100
+chain_width = 100
+fn_call_width = 100
+short_array_element_width_threshold = 100
+struct_lit_width = 100
+struct_variant_width = 100
 
 single_line_if_else_max_width = 100
 single_line_let_else_max_width = 100
 
 use_field_init_shorthand = true
-
 remove_nested_parens = true
-
-reorder_modules = true
-reorder_imports = true
