--- a/treeview/Cargo.toml
+++ b/treeview/Cargo.toml
@@ -17,3 +17,4 @@ numfmt = { workspace = true }
 dendros = { workspace = true }
 utils = { workspace = true }
 widget = { workspace = true }
+num-traits = { workspace = true }
