Code re-organization, continued x 6.

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -18,3 +18,5 @@ single_line_let_else_max_width = 100
 
 use_field_init_shorthand = true
 remove_nested_parens = true
+
+fn_params_layout = "Compressed"
