--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ numfmt = "1.1.1"
 objc2 = "0.6.1"
 objc2-app-kit = "0.3.1"
 objc2-foundation = "0.3.1"
+rayon = "1.10.0"
 roarsvg = "0.5.0"
 tracing-subscriber = "0.3.19"
 
