--- a/treeview/Cargo.toml
+++ b/treeview/Cargo.toml
@@ -18,3 +18,4 @@ dendros = { workspace = true }
 utils = { workspace = true }
 widget = { workspace = true }
 num-traits = { workspace = true }
+rayon = { workspace = true }
