--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,22 +1,20 @@
 edition = "2024"
 
+fn_single_line = true
 reorder_imports = true
 reorder_modules = true
-
-max_width = 100
-
-array_width = 100
-attr_fn_like_width = 100
-chain_width = 100
-fn_call_width = 100
-short_array_element_width_threshold = 100
-struct_lit_width = 100
-struct_variant_width = 100
-
-single_line_if_else_max_width = 100
-single_line_let_else_max_width = 100
-
-use_field_init_shorthand = true
-remove_nested_parens = true
-
 fn_params_layout = "Compressed"
+use_small_heuristics = "Max"
+remove_nested_parens = true
+use_field_init_shorthand = true
+
+max_width = 120
+array_width = 120
+chain_width = 120
+fn_call_width = 120
+struct_lit_width = 120
+attr_fn_like_width = 120
+struct_variant_width = 120
+single_line_if_else_max_width = 120
+single_line_let_else_max_width = 120
+short_array_element_width_threshold = 120
