--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,12 +92,14 @@ tracing-subscriber = "0.3.19"
 [workspace.dependencies.dendros]
 git = "https://github.com/karolisr/dendros.git"
 branch = "main"
+# path = "../dendros"
 default-features = false
 features = []
 
 [workspace.dependencies.muda]
 git = "https://github.com/karolisr/muda.git"
 branch = "custom"
+# path = "../muda"
 default-features = false
 features = []
 
@@ -137,6 +139,7 @@ features = []
 [workspace.dependencies.iced]
 git = "https://github.com/karolisr/iced.git"
 branch = "custom"
+# path = "../iced"
 default-features = false
 features = [
     ### Enables the "wgpu" GPU-accelerated renderer backend
