--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["app", "utils", "treeview"]
+members = ["app", "riced", "treeview"]
 resolver = "3"
 
 [workspace.package]
@@ -77,7 +77,7 @@ rpath = false
 # --------------------------------------------------------------------------
 
 [workspace.dependencies]
-utils = { path = "utils" }
+riced = { path = "riced" }
 treeview = { path = "treeview" }
 num-traits = "0.2.19"
 numfmt = "1.1.1"
