--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -26,8 +26,8 @@ deb_depends = []
 # --------------------------------------------------------------------------
 
 [dependencies]
-utils = { workspace = true }
 treeview = { workspace = true }
+riced = { workspace = true }
 iced = { workspace = true, features = ["wgpu", "thread-pool", "sipper", "crisp"] }
 dendros = { workspace = true }
 # tracing-subscriber = { workspace = true }
