--- a/treeview/Cargo.toml
+++ b/treeview/Cargo.toml
@@ -11,13 +11,7 @@ categories.workspace = true
 [lib]
 crate-type = ["rlib"]
 
-[build-dependencies]
-convert_case = "0.8.0"
-
 [dependencies]
-iced = { workspace = true, features = ["canvas", "lazy", "svg"] }
-numfmt = { workspace = true }
+riced = { workspace = true }
 dendros = { workspace = true }
-utils = { workspace = true }
-num-traits = { workspace = true }
 rayon = { workspace = true }
